<resources>
    <string name="app_name">SamsungProject</string>
    <string name="release_app_name">Walkly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logged_in">Вы вошли в аккаунт:</string>
    <string name="my_routes">Мои маршруты</string>
    <string name="new_route">Новый маршрут</string>
    <string name="new_route_name">Введите название маршрута</string>
    <string name="create_route">Создать маршрут</string>
    <string name="route_name">Название маршрута</string>
    <string name="input_time">Введите время</string>
    <string name="select_length_of_path">Выберите длину маршрута</string>
    <string name="long_">Длинный</string>
    <string name="medium">Средний</string>
    <string name="small">Короткий</string>
    <string name="route_is_not_chosen">маршрут не выбран</string>
    <string name="home">Меню</string>
    <string name="map">Карта</string>
    <string name="settings">Настройки</string>
    <string name="show_my_location">показать меня</string>
    <string name="distance_meters">%1$d м</string>
    <string name="distance_kilometers">%.1f км</string>
    <string name="select_units_of_distance_measurement">Выбрать единицы расстояния</string>
    <string name="app_theme">Тема приложения</string>
    <string name="Passed">Всего пройдено:</string>
    <string name="leaderboard">Топ пользователей:</string>
    <string name="theme">Тема</string>
    <string name="units">Eдиницы измерения</string>
    <string name="exit_from_account">Выйти из аккаунта</string>
    <string-array name="units">
        <item>Метры</item>
        <item>Мили</item>
        <item>Футы</item>
        <item>Ярды</item>
    </string-array>
    <string-array name="themes">
        <item>Системная</item>
        <item>Светлая</item>
        <item>Тёмная</item>
    </string-array>
    <string-array name="lengthItems">
        <item>Длинный</item>
        <item>Средний</item>
        <item>Короткий</item>
    </string-array>

</resources>